# agentic_crewai

./: README.MD
ai_debate/: README.md  pyproject.toml
ai_debate/src/ai_debate/: crew.py  main.py
ai_debate/src/ai_debate/config/: agents.yaml  tasks.yaml
dev_team/: README.md  pyproject.toml
dev_team/src/dev_team/: crew.py
dev_team/src/dev_team/config/: agents.yaml
stock_picker/: README.md  pyproject.toml
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
