[project]
name = "dev_team"
version = "0.1.0"
description = "dev_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
dev_team = "dev_team.main:run"
run_crew = "dev_team.main:run"
train = "dev_team.main:train"
replay = "dev_team.main:replay"
test = "dev_team.main:test"
run_with_trigger = "dev_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
